app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/hatmarch/spring-framework-petclinic.git
    app.openshift.io/vcs-ref: master
  labels:
    app: petclinic
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/part-of: petclinic
    app.openshift.io/runtime: java
  name: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/petclinic-stage/petclinic:stage
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
